# cli_chess

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: github-actions-workflows.yml
src/: main.rs  utilities.rs
src/board/: initial_board.rs  mod.rs  utilities.rs
src/board/pawn/: mod.rs
src/board/tests/: mod.rs
src/board/tests/snapshots/: cli_chess__board__tests__von_scheve_vs_teichmann_game_1_berlin_1907_1b.snap  cli_chess__board__tests__von_scheve_vs_teichmann_game_1_berlin_1907_1w.snap  cli_chess__board__tests__von_scheve_vs_teichmann_game_1_berlin_1907_2w.snap.new
src/board/tests/von_scheve_vs_teichmann_game_1_berlin_1907/: mod.rs
src/mode/: mod.rs
src/mode/menu/: mod.rs
src/mode/practice/: mod.rs
src/mode/utilities/: mod.rs
src/model/: mod.rs
src/model/class/: mod.rs
src/model/game/: mod.rs
src/model/game/initial_piece_positions/: mod.rs
src/model/game/tests/: mod.rs
src/model/movement/: mod.rs
src/model/piece/: mod.rs
src/model/position/: mod.rs
src/movement/: mod.rs  tests.rs
src/movement/snapshots/: cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_1b.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_1w.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_2b.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_2w.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_3b.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_3w.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_4b.snap  cli_chess__movement__tests__von_scheve_vs_teichmann_game_1_berlin_1907_4w.snap
src/piece/: mod.rs
src/position/: file.rs  mod.rs  rank.rs
src/practice/: mod.rs
src/pratice/: mod.rs
src/reporter/: mod.rs
(+26 files in other folders)
