[package]
name = "cli_chess"
description = "A program to play chess on the command line."
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://gitlab.com/DeveloperC/cli_chess"
readme = "README.md"
keywords = ["chess", "cli", "game", "board", "player"]
categories = ["games", "command-line-utilities"]


[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
console = "0.13.0"
serde = "1.0.117"


[dev-dependencies]
rstest = "0.6.4"
insta = "1.3.0"
