[package]
name = "cli_chess"
description = "A program to play chess on the command line."
version = "0.1.1"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/cli_chess"
readme = "README.md"
keywords = ["chess", "cli", "game", "board", "player"]
categories = ["games", "command-line-utilities"]


[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
console = "0.14.1"
serde = { version = "1.0.125", features = ["derive"] }


[dev-dependencies]
rstest = "0.9.0"
insta = "1.7.1"
