[package]
name = "cli_chess"
description = "A program to play chess on the command line."
version = "0.3.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/cli_chess"
readme = "README.md"
keywords = ["chess", "cli", "game", "board", "player"]
categories = ["games", "command-line-utilities"]


[dependencies]
# Logging.
log = "0.4.14"
pretty_env_logger = "0.4.0"

# For pretty output.
console = "0.15.0"

# For defining constants.
lazy_static = "1.4.0"


[dev-dependencies]
# Parametrized testing
rstest = "0.11.0"

# Snapshot testing.
insta = "1.8.0"


[profile.release]
lto = 'fat'
codegen-units = 1
